2023-05-14 Massimo Manghi <mxmanghi@apache.org>
	* tests/rivet.test: more contributions provided by Scott Pitcher <scotty@svptechnicalservices.com.au>)
	* tests/apachetest/apachetest.tcl: More improvements to the test script. Now
	handling also Apache directive IncludeOptional and enabling execution control 
	through environment variables
	* tests/post.rvt:
	* tests/post.test: add a test for ::rivet::raw_post

	* 
2023-04-11 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/TclWebapache.c:
	* src/mod_rivet_ng/rivetCore.c:
	* src/mod_rivet_ng/rivet_types.h:
	* src/request/apache_request.c:
	* src/request/apache_request.h: handling length of data in POST requests. It
	fixes ::rivet::raw_post when the POSTed data don't have variable sections (patch
	provided by Scott Pitcher <scotty@svptechnicalservices.com.au>)

2023-01-11 Massimo Manghi <mxmanghi@apache.org>
	* src/TclWeb.h: also this include file had a CONST84 specifier that needed to
	be converted as CONST86

2023-01-09 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/TclWebapache.c:
	* src/mod_rivet_ng/rivetChannel.c:
	* src/mod_rivet_ng/rivetCore.c:	Replaced CONST84 with CONST86 that should
	allow for a smooth transition to Tcl8.7

2022-11-05 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: new version 3.2.3
	* src/*.[hc]: Thoroughly removed trailing spaces

2022-06-21 Massimo Manghi <mxmanghi@apache.org>
	* Changelog: logging release of Rivet 3.2.2.

2022-06-10 Massimo Manghi <mxmanghi@apache.org>
	* doc/xml/directives.xml: moved misplaced text in table
	* configure.ac: Changed default for HonorHeadRequests to 'yes'
	* src/mod_rivet_ng/mod_rivet_generator.c: rephrased comment documenting
	the exit handler behavior

2022-05-31 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/*.c: Directive HonorHeaderOnlyReqs renamed as
	HonorHeadRequests, which sounds more consistent with the common parlance 
	regarding HTTP

2022-03-01 Massimo Manghi <mxmanghi@apache.org>